--- a/newsAppFrontend/package.json
+++ b/newsAppFrontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "firebase": "^7.17.1",
     "react": "^16.13.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.4.0",
     "react-scripts": "3.4.1"
